# relief

./: .gitignore  AGENTS.md  CMakeLists.txt
docs/: SLIM_ldlt_nullspace_explanation.md
include/: deform_surface.h  eigen_alias.h  fit_on_surface.h  flatten_surface.h
src/: deform_surface.cpp  fit_on_surface.cpp  flatten_surface.cpp  main.cpp
